k8s/attendee-resources/workshops/workshop-18/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
