k8s/attendee-resources/workshops/workshop-18/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  labels:
    app: hello
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: hello
          servicePort: 80
        path: /hello
